# rsettingsqt

./: .gitmodules  CMakeLists.txt  README.md  build.sh  rsettingsqt.h
